--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,102 +2,95 @@ trigger:
   - main
 
 variables:
-  resourceGroup: 'rg-devops-cli'  # Ensure this resource group exists
+  resourceGroup: 'rg-devops-cli'
   location: 'East US'
-  appServicePlan: 'ASP-DevopsRG-87c7'  # Ensure this App Service Plan exists
+  appServicePlan: 'ASP-DevopsRG-87c7'
   webAppName: 'webapp-cli-demo-$(Build.BuildId)'
-  runtime: 'NODE:18-lts'  # Ensure this runtime is valid and available
+  runtime: 'NODE:18-lts'
 
 pool:
   vmImage: 'ubuntu-latest'
 
 stages:
-- stage: DeployAndTest
-  displayName: 'Deploy Web App & Run Smoke Tests'
+- stage: Build
+  displayName: 'Build Application'
   jobs:
-  - job: DeployJob
-    displayName: 'Deploy and Verify Web App'
+  - job: BuildJob
+    displayName: 'Install, Lint, Test, and Publish'
     steps:
-
-    - task: AzureCLI@2
-      displayName: 'Create Web App'
-      inputs:
-        azureSubscription: 'Con1'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          # Ensure the resource group exists
-          if ! az group show --name ${{ variables.resourceGroup }} &>/dev/null; then
-            echo "❌ Resource group '${{ variables.resourceGroup }}' does not exist. Exiting."
-            exit 1
-          fi
-
-          # Create the Web App
-          echo "🚀 Creating Web App: ${{ variables.webAppName }}"
-          az webapp create \
-            --resource-group ${{ variables.resourceGroup }} \
-            --plan ${{ variables.appServicePlan }} \
-            --name ${{ variables.webAppName }} \
-            --runtime "${{ variables.runtime }}"
-
     - task: NodeTool@0
       inputs:
         versionSpec: '18.x'
       displayName: 'Use Node.js 18.x'
 
     - script: |
-        cd src
         npm install
-      displayName: '📦 Install Dependencies'
-
-    - task: ArchiveFiles@2
-      displayName: '📦 Zip Code for Deployment'
-      inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/src'
-        includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
-        replaceExistingArchive: true
-
-    - task: AzureWebApp@1
-      displayName: '🚀 Deploy to Azure Web App'
-      inputs:
-        azureSubscription: 'Con1'
-        appType: 'webAppLinux'
-        appName: '$(webAppName)'
-        package: '$(Build.ArtifactStagingDirectory)/app.zip'
+      displayName: 'Install Dependencies'
 
     - script: |
-        echo "🔍 Running post-deployment smoke tests..."
-        appUrl="https://${{ variables.webAppName }}.azurewebsites.net"
+        npm run lint
+      displayName: 'Run Lint Checks'
 
-        # Test 1: Check HTTP 200 response
-        echo "Test 1: Checking HTTP 200 response..."
-        status_code=$(curl -s -o /dev/null -w "%{http_code}" $appUrl)
-        if [ "$status_code" -ne 200 ]; then
-          echo "❌ Test 1 Failed: Web App is not reachable (Status Code: $status_code)"
-          exit 1
-        else
-          echo "✅ Test 1 Passed"
-        fi
+    - script: |
+        npm test
+      displayName: 'Run Unit Tests'
 
-        # Test 2: Check response time
-        echo "Test 2: Checking response time..."
-        response_time=$(curl -o /dev/null -s -w "%{time_total}\n" $appUrl)
-        if (( $(echo "$response_time > 5.0" | bc -l) )); then
-          echo "❌ Test 2 Failed: Response took too long ($response_time seconds)"
-          exit 1
-        else
-          echo "✅ Test 2 Passed"
-        fi
+    - task: ArchiveFiles@2
+      displayName: 'Archive Files'
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+        replaceExistingArchive: true
 
-        # Test 3: Check for specific content
-        echo "Test 3: Checking for specific content..."
-        content=$(curl -s $appUrl)
-        if [[ "$content" == *"Hello from Azure DevOps"* ]]; then
-          echo "✅ Test 3 Passed: Content verified"
-        else
-          echo "❌ Test 3 Failed: Unexpected content"
-          exit 1
-        fi
-      displayName: '✅ Post-Deployment Smoke Tests'
+    - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      artifact: drop
+      displayName: 'Publish Artifact'
+
+- stage: Deploy_Staging
+  displayName: 'Deploy to Staging'
+  dependsOn: Build
+  jobs:
+  - deployment: DeployStaging
+    displayName: 'Deploy to Staging Environment'
+    environment: 'Staging'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureWebApp@1
+            displayName: 'Deploy to Azure Web App (Staging)'
+            inputs:
+              azureSubscription: 'Con1'
+              appType: 'webAppLinux'
+              appName: '$(webAppName)-staging'
+              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+
+- stage: Deploy_Production
+  displayName: 'Deploy to Production'
+  dependsOn: Deploy_Staging
+  jobs:
+  - deployment: DeployProduction
+    displayName: 'Deploy to Production Environment'
+    environment: 'Production'
+    strategy:
+      runOnce:
+        preDeploy:
+          steps:
+          - task: ManualValidation@0
+            timeoutInMinutes: 1440 # 1 day
+            inputs:
+              notifyUsers: |
+                tanishqbansal2645@gmail.com
+              instructions: 'Please approve the deployment to production.'
+              onTimeout: 'reject'
+        deploy:
+          steps:
+          - task: AzureWebApp@1
+            displayName: 'Deploy to Azure Web App (Production)'
+            inputs:
+              azureSubscription: 'Con1'
+              appType: 'webAppLinux'
+              appName: '$(webAppName)'
+              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
