--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -130,7 +130,7 @@ stages:
                   path: '$(Pipeline.Workspace)/drop'
 
               - task: AzureWebApp@1
-                displayName: '🚀 Deploy to Azure Web App (Production)'
+                displayName: '🚀 Deploy to Azure Weeb App (Production)'
                 inputs:
                   azureSubscription: 'Con1'
                   appType: 'webAppLinux'
