--- a/src/package.json
+++ b/src/package.json
@@ -5,17 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint . --ext .js",
-    "test": "jest"
+    "test": "mocha server.test.js",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "chai": "^4.4.1",
+    "mocha": "^10.2.0",
+    "eslint": "^8.57.0"
   }
 }
