--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,11 @@
 {
   "env": {
-    "es2021": true,
     "node": true,
-    "mocha": true
+    "es2021": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "ecmaVersion": 12
   },
-  "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "single"]
-  }
+  "rules": {}
 }
