--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "azure-node-ci-cd",
+  "name": "my-project",
   "version": "1.0.0",
-  "description": "Test Azure DevOps pipeline",
-  "main": "server.js",
+  "description": "Node.js project with CI/CD pipeline",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"No tests specified\" && exit 0",
-    "lint": "eslint . --ext .js"
+    "start": "node src/index.js",
+    "lint": "eslint src/ tests/",
+    "test": "jest",
+    "pretest": "npm run lint"
   },
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "supertest": "^6.0.0"
   }
 }
