--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "my-project",
+  "name": "azure-webapp-devops-demo",
   "version": "1.0.0",
-  "description": "Node.js project with CI/CD pipeline",
+  "description": "Sample Node.js web app with Azure DevOps pipeline",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "lint": "eslint src/ tests/",
-    "test": "jest",
-    "pretest": "npm run lint"
+    "lint": "eslint src/**",
+    "test": "jest"
   },
   "author": "Your Name",
   "license": "MIT",
@@ -15,8 +14,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0",
-    "supertest": "^6.0.0"
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
