--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,15 @@
 module.exports = {
   env: {
     node: true,
-    commonjs: true,
-    es2021: true,
     jest: true,
+    es2021: true
   },
   extends: 'eslint:recommended',
   parserOptions: {
-    ecmaVersion: 12,
+    ecmaVersion: 12
   },
   rules: {
-    // Add custom rules here
-  },
+    semi: ['error', 'always'],
+    quotes: ['error', 'single']
+  }
 };
