--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,163 +3,110 @@ trigger:
     include:
       - main
 
+pool:
+  vmImage: 'ubuntu-latest'
+
 variables:
   resourceGroup: 'rg-devops-cli'
   location: 'East US'
   appServicePlan: 'ASP-DevopsRG-87c7'
-  webAppName: 'webapp-cli-demo-$(Build.BuildId)'
+  webAppNameDev: 'webapp-cli-demo-dev'
+  webAppNameProd: 'webapp-cli-demo-prod'
   runtime: 'NODE|18-lts'
-  nodeVersion: '18.x'
-
-pool:
-  vmImage: 'ubuntu-latest'
 
 stages:
-# 🛠 Stage 1: Build, Lint, Test
-- stage: BuildAndTest
-  displayName: 'Build, Lint, and Test'
+# -------------------- Build Stage --------------------
+- stage: Build
+  displayName: 'Build and Test'
   jobs:
-  - job: BuildJob
-    displayName: 'Install, Lint, Test, and Package'
-    steps:
-    - task: NodeTool@0
-      inputs:
-        versionSpec: '$(nodeVersion)'
-      displayName: 'Use Node.js $(nodeVersion)'
+    - job: BuildJob
+      displayName: 'Install, Lint, Test & Package'
+      steps:
 
-    - script: |
-        npm install
-      displayName: '📦 Install Dependencies'
+        - task: NodeTool@0
+          inputs:
+            versionSpec: '18.x'
+          displayName: 'Use Node.js 18'
 
-    - script: |
-        npx eslint . --ext .js,.ts
-      displayName: '🧹 Run Lint Check'
+        - script: |
+            npm install
+          displayName: '📦 Install Dependencies'
 
-    - script: |
-        npm run test
-      displayName: '🧪 Run Unit Tests'
+        - script: |
+            npx eslint . || echo "⚠️ Linting warnings (not failing build)"
+          displayName: '🧹 Run ESLint'
 
-    - task: ArchiveFiles@2
-      displayName: '📦 Archive build'
-      inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/src'
-        includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
-        replaceExistingArchive: true
+        - script: |
+            npm test
+          displayName: '🧪 Run Unit Tests with Jest'
 
-    - task: PublishBuildArtifacts@1
-      displayName: '📤 Publish Artifact'
-      inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)/app.zip'
-        ArtifactName: 'drop'
+        - task: ArchiveFiles@2
+          displayName: '📦 Zip for Deployment'
+          inputs:
+            rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+            includeRootFolder: false
+            archiveType: 'zip'
+            archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
+            replaceExistingArchive: true
 
-# 🚀 Stage 2: Deploy to Development
+        - task: PublishPipelineArtifact@1
+          inputs:
+            targetPath: '$(Build.ArtifactStagingDirectory)'
+            artifact: 'drop'
+            publishLocation: 'pipeline'
+
+# -------------------- Dev Deployment --------------------
 - stage: DeployDev
-  displayName: 'Deploy to Dev'
-  dependsOn: BuildAndTest
+  displayName: 'Deploy to Development'
+  dependsOn: Build
   jobs:
-  - deployment: DeployToDev
-    displayName: 'Deploy App to Dev'
-    environment: 'dev'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-            artifact: drop
+    - deployment: DeployToDev
+      displayName: 'Deploy Web App to Dev'
+      environment: 'dev'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - task: DownloadPipelineArtifact@2
+                inputs:
+                  artifactName: 'drop'
+                  targetPath: '$(Pipeline.Workspace)'
 
-          - task: AzureCLI@2
-            displayName: '🔧 Ensure Resource Group and Create Web App'
-            inputs:
-              azureSubscription: 'Con1'
-              scriptType: 'bash'
-              scriptLocation: 'inlineScript'
-              inlineScript: |
-                echo "🔍 Checking if resource group '${{ variables.resourceGroup }}' exists..."
-                if ! az group show --name ${{ variables.resourceGroup }} &>/dev/null; then
-                  echo "❌ Resource group not found. Creating..."
-                  az group create --name ${{ variables.resourceGroup }} --location "${{ variables.location }}"
-                else
-                  echo "✅ Resource group exists."
-                fi
+              - task: AzureWebApp@1
+                displayName: '🚀 Deploy to Dev Web App'
+                inputs:
+                  azureSubscription: 'Con1'
+                  appType: 'webAppLinux'
+                  appName: '$(webAppNameDev)'
+                  package: '$(Pipeline.Workspace)/app.zip'
 
-                echo "🔍 Validating runtime '${{ variables.runtime }}'..."
-                runtime_check=$(az webapp list-runtimes | grep -i "${{ variables.runtime }}")
-                if [ -z "$runtime_check" ]; then
-                  echo "❌ Runtime '${{ variables.runtime }}' is not supported. Exiting."
-                  exit 1
-                else
-                  echo "✅ Runtime supported."
-                fi
-
-                echo "🚀 Creating Web App: ${{ variables.webAppName }}"
-                az webapp create \
-                  --resource-group ${{ variables.resourceGroup }} \
-                  --plan ${{ variables.appServicePlan }} \
-                  --name ${{ variables.webAppName }} \
-                  --runtime "${{ variables.runtime }}"
-
-          - task: AzureWebApp@1
-            displayName: '🚀 Deploy to Azure Web App (Dev)'
-            inputs:
-              azureSubscription: 'Con1'
-              appType: 'webAppLinux'
-              appName: '$(webAppName)'
-              package: $(Pipeline.Workspace)/drop/app.zip
-
-          - script: |
-              echo "🔍 Running smoke tests..."
-              appUrl="https://$(webAppName).azurewebsites.net"
-
-              echo "Test 1: Checking HTTP 200..."
-              status_code=$(curl -s -o /dev/null -w "%{http_code}" $appUrl)
-              if [ "$status_code" -ne 200 ]; then
-                echo "❌ Test 1 Failed: Web App is not reachable (Status Code: $status_code)"
-                exit 1
-              else
-                echo "✅ Test 1 Passed"
-              fi
-
-              echo "Test 2: Checking response time..."
-              response_time=$(curl -o /dev/null -s -w "%{time_total}\n" $appUrl)
-              if (( $(echo "$response_time > 5.0" | bc -l) )); then
-                echo "❌ Test 2 Failed: Response took too long ($response_time seconds)"
-                exit 1
-              else
-                echo "✅ Test 2 Passed"
-              fi
-
-              echo "Test 3: Checking if content is correct..."
-              content=$(curl -s $appUrl)
-              if [[ "$content" == *"Hello from Azure DevOps"* ]]; then
-                echo "✅ Test 3 Passed: Content verified"
-              else
-                echo "❌ Test 3 Failed: Unexpected content"
-                exit 1
-              fi
-            displayName: '✅ Post-Deploy Smoke Tests (Dev)'
-
-# ✅ Stage 3: Deploy to Production (with approval)
+# -------------------- Production Deployment --------------------
 - stage: DeployProd
   displayName: 'Deploy to Production'
   dependsOn: DeployDev
   condition: succeeded()
+  approval:
+    approvals:
+      - reviewers:
+          - name: '<YOUR-APPROVER-EMAIL-OR-ID>'
+            type: User
   jobs:
-  - deployment: DeployToProd
-    displayName: 'Deploy App to Production'
-    environment: 'production'  # Requires manual approval in Azure DevOps UI
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-            artifact: drop
+    - deployment: DeployToProd
+      displayName: 'Deploy Web App to Prod'
+      environment: 'prod'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - task: DownloadPipelineArtifact@2
+                inputs:
+                  artifactName: 'drop'
+                  targetPath: '$(Pipeline.Workspace)'
 
-          - task: AzureWebApp@1
-            inputs:
-              azureSubscription: 'Con1'
-              appType: 'webAppLinux'
-              appName: '$(webAppName)-prod'
-              package: $(Pipeline.Workspace)/drop/app.zip
-            displayName: '🚀 Deploy to Azure Web App (Prod)'
+              - task: AzureWebApp@1
+                displayName: '🚀 Deploy to Prod Web App'
+                inputs:
+                  azureSubscription: 'Con1'
+                  appType: 'webAppLinux'
+                  appName: '$(webAppNameProd)'
+                  package: '$(Pipeline.Workspace)/app.zip'
