--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,12 @@
-module.exports = {
-  env: {
-    node: true,
-    jest: true,
-    es2021: true
+{
+  "env": {
+    "node": true,
+    "es2021": true
   },
-  extends: 'eslint:recommended',
-  parserOptions: {
-    ecmaVersion: 12
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
-  rules: {
-    semi: ['error', 'always'],
-    quotes: ['error', 'single']
-  }
-};
+  "rules": {}
+}
